<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-mdplayer</artifactId>
  <version>0.0.13</version>

  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <id>read-properties</id>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>spotbugs</id>
      <activation>
        <property>
          <name>spotbugs</name>
          <value/>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>4.8.4.0</version>
            <dependencies>
              <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
              <dependency>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs</artifactId>
                <version>4.8.4</version>
              </dependency>
              <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>3.5</version>
              </dependency>
            </dependencies>
            <configuration>
              <plugins>
                <plugin>
                  <groupId>com.h3xstream.findsecbugs</groupId>
                  <artifactId>findsecbugs-plugin</artifactId>
                  <version>1.12.0</version>
                </plugin>
                <plugin>
                  <groupId>com.mebigfatguy.fb-contrib</groupId>
                  <artifactId>fb-contrib</artifactId>
                  <version>7.4.3.sb</version>
                </plugin>
              </plugins>

              <jvmArgs>
                <!--
                 seems not working, use export MAVEN_OPTS=
                 e.g.
                 MAVEN_OPTS=-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf mvn -P spotbugs spotbugs:gui
                 -->
                -Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf
              </jvmArgs>
              <systemPropertyVariables>
                <swing.defaultlaf>com.formdev.flatlaf.FlatLightLaf</swing.defaultlaf>
              </systemPropertyVariables>
              <failOnError>false</failOnError>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>25</source> <!-- TODO release causes compilation failure why? -->
          <target>25</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
            -Djava.util.logging.config.file=src/test/resources/logging.properties
            -Dvavi.test.dev.null=@{dev.null}
            -Dmdplayer.variant.ymf262=@{mdplayer.variant.ymf262}
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.0.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-commons</artifactId>
      <version>1.1.16</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-serdes</artifactId>
      <version>1.0.13</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-archive</artifactId>
      <version>1.1.11</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound</artifactId>
      <version>1.0.24</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-awt</artifactId>
      <version>1.0.10</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-mdsound</artifactId>
      <version>0.0.15</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-mdi</artifactId>
      <version>0.0.4</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-mucom88</artifactId>
      <version>0.0.8</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-pmd</artifactId>
      <version>0.0.6</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-moon</artifactId>
      <version>0.0.6</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-muap</artifactId>
      <version>0.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-mdsdrv</artifactId>
      <version>0.4.3</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-apps-z80</artifactId>
      <version>1.0.13</version>
    </dependency>

    <dependency>
      <groupId>com.github.kwhat</groupId>
      <artifactId>jnativehook</artifactId>
      <version>2.2.2</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer.vavi-sound-nsfplayer</groupId>
      <artifactId>nsfplayer</artifactId>
      <version>0.2.11</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.21.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>5.21.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-screenscraping</artifactId>
      <version>1.0.17</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>vavi-net-auth-amazon</artifactId>
          <groupId>com.github.umjammer.vavi-net-auth</groupId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
</project>